src/parser/snapshots/codecrafters_interpreter__parser__tests__binary_complex.snap
---
source: src/parser/tests.rs
expression: ast
---
Spanned {
    item: Binary(
        BinaryExpr {
            left: Spanned {
                item: Number(
                    1.0,
                ),
                span: Span {
                    line: 1,
                    start: 0,
                    end: 1,
                },
            },
            op: Add,
            right: Spanned {
                item: Binary(
                    BinaryExpr {
                        left: Spanned {
                            item: Number(
                                2.0,
                            ),
                            span: Span {
                                line: 1,
                                start: 4,
                                end: 5,
                            },
                        },
                        op: Mul,
                        right: Spanned {
                            item: Group(
                                Spanned {
                                    item: Binary(
                                        BinaryExpr {
                                            left: Spanned {
                                                item: Number(
                                                    3.0,
                                                ),
                                                span: Span {
                                                    line: 1,
                                                    start: 9,
                                                    end: 10,
                                                },
                                            },
                                            op: Add,
                                            right: Spanned {
                                                item: Number(
                                                    5.0,
                                                ),
                                                span: Span {
                                                    line: 1,
                                                    start: 13,
                                                    end: 14,
                                                },
                                            },
                                        },
                                    ),
                                    span: Span {
                                        line: 1,
                                        start: 9,
                                        end: 14,
                                    },
                                },
                            ),
                            span: Span {
                                line: 1,
                                start: 8,
                                end: 15,
                            },
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    start: 4,
                    end: 15,
                },
            },
        },
    ),
    span: Span {
        line: 1,
        start: 0,
        end: 15,
    },
}
