src/parser/snapshots/codecrafters_interpreter__parser__tests__print2.snap
---
source: src/parser/tests.rs
expression: ast
---
[
    Spanned {
        item: Expr(
            Spanned {
                item: Binary(
                    BinaryExpr {
                        left: Spanned {
                            item: String(
                                "asf",
                            ),
                            span: Span {
                                line: 1,
                                start: 0,
                                end: 5,
                            },
                        },
                        op: Add,
                        right: Spanned {
                            item: String(
                                "bc",
                            ),
                            span: Span {
                                line: 1,
                                start: 8,
                                end: 12,
                            },
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    start: 0,
                    end: 12,
                },
            },
        ),
        span: Span {
            line: 1,
            start: 0,
            end: 13,
        },
    },
]
