src/parser/snapshots/codecrafters_interpreter__parser__tests__var.snap
---
source: src/parser/tests.rs
expression: ast
---
[
    Spanned {
        item: Var(
            VarDeclaration {
                ident: Spanned {
                    item: "a",
                    span: Span {
                        line: 1,
                        start: 4,
                        end: 5,
                    },
                },
                expr: Some(
                    Spanned {
                        item: Number(
                            10.0,
                        ),
                        span: Span {
                            line: 1,
                            start: 8,
                            end: 10,
                        },
                    },
                ),
            },
        ),
        span: Span {
            line: 1,
            start: 0,
            end: 11,
        },
    },
    Spanned {
        item: Print(
            Spanned {
                item: GlobalVariable(
                    "a",
                ),
                span: Span {
                    line: 1,
                    start: 18,
                    end: 19,
                },
            },
        ),
        span: Span {
            line: 1,
            start: 12,
            end: 20,
        },
    },
]
